--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@iconify/iconify": "^2.0.0-rc.2",
     "@vueuse/core": "^4.0.0-rc.5",
+    "axios": "^0.21.0",
     "nprogress": "^0.2.0",
     "vue": "^3.0.4",
     "vue-i18n": "9.0.0-beta.8",
