--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "vite --port 3333 --open",
-    "build": "cross-env NODE_ENV=production vite build && esno scripts/ssg.ts"
+    "build": "cross-env NODE_ENV=production vite build && esno scripts/ssg.ts",
+    "test": "yarn jest"
   },
   "dependencies": {
     "@iconify/iconify": "^2.0.0-rc.2",
@@ -11,24 +12,28 @@
     "nprogress": "^0.2.0",
     "vue": "^3.0.4",
     "vue-i18n": "9.0.0-beta.8",
-    "vue-router": "^4.0.0-rc.6"
+    "vue-router": "^4.0.0-rc.6",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.4.3",
     "@iconify/json": "^1.1.267",
     "@purge-icons/generated": "^0.4.1",
+    "@types/jest": "^26.0.19",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@vue/compiler-sfc": "^3.0.4",
+    "@vue/test-utils": "^2.0.0-beta.13",
     "@vuedx/typescript-plugin-vue": "^0.2.3",
     "autoprefixer": "^10.0.4",
     "chromium": "^3.0.2",
     "cross-env": "^7.0.3",
     "eslint": "^7.14.0",
     "esno": "^0.3.0",
+    "jest": "^26.6.3",
     "postcss-nested": "^5.0.1",
     "presite": "^2.0.1",
     "tailwindcss": "^2.0.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2",
     "vite": "^1.0.0-rc.13",
     "vite-plugin-components": "^0.5.0",
@@ -36,7 +41,9 @@
     "vite-plugin-purge-icons": "^0.4.5",
     "vite-plugin-pwa": "^0.1.7",
     "vite-plugin-voie": "^0.4.1",
-    "voie-pages": "^0.4.0"
+    "voie-pages": "^0.4.0",
+    "vue-jest": "^5.0.0-alpha.1",
+    "@vue/compiler-sfc": "^3.0.0-alpha.11"
   },
   "pnpm": {
     "overrides": {
