--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vue": "^3.0.4",
     "vue-i18n": "9.0.0-beta.8",
     "vue-router": "^4.0.0-rc.6",
-    "vuex": "^3.6.0"
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.4.3",
@@ -22,6 +22,7 @@
     "@types/jest": "^26.0.19",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@vue/compiler-sfc": "^3.0.0-alpha.11",
     "@vue/test-utils": "^2.0.0-beta.13",
     "@vuedx/typescript-plugin-vue": "^0.2.3",
     "autoprefixer": "^10.0.4",
@@ -42,8 +43,7 @@
     "vite-plugin-pwa": "^0.1.7",
     "vite-plugin-voie": "^0.4.1",
     "voie-pages": "^0.4.0",
-    "vue-jest": "^5.0.0-alpha.1",
-    "@vue/compiler-sfc": "^3.0.0-alpha.11"
+    "vue-jest": "^5.0.0-alpha.1"
   },
   "pnpm": {
     "overrides": {
