--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^3.0.4",
     "vue-i18n": "9.0.0-beta.8",
     "vue-router": "^4.0.0-rc.6",
-    "vuex": "^4.0.0-rc.2"
+    "vuex": "^4.0.0-rc.2",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.4.3",
