--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "vite --port 3333 --open",
     "build": "cross-env NODE_ENV=production vite build && esno scripts/ssg.ts",
-    "test": "yarn jest"
+    "test": "yarn jest --watch"
   },
   "dependencies": {
     "@iconify/iconify": "^2.0.0-rc.2",
