--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nprogress": "^0.2.0",
     "vue": "^3.0.4",
     "vue-i18n": "9.0.0-beta.8",
+    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^4.0.0-rc.6",
     "vuex": "^4.0.0-rc.2",
     "vuex-persistedstate": "^4.0.0-beta.1"
