--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-i18n": "9.0.0-beta.8",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^4.0.0-rc.6",
+    "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0-rc.2",
     "vuex-persistedstate": "^4.0.0-beta.1"
   },
