--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@iconify/iconify": "^2.0.0-rc.2",
     "@vueuse/core": "^4.0.0-rc.5",
     "axios": "^0.21.0",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
+    "optiscroll": "^3.2.1",
     "vue": "^3.0.4",
     "vue-i18n": "9.0.0-beta.8",
-    "vue-infinite-loading": "^2.4.5",
     "vue-router": "^4.0.0-rc.6",
     "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0-rc.2",
@@ -23,6 +24,7 @@
     "@iconify/json": "^1.1.267",
     "@purge-icons/generated": "^0.4.1",
     "@types/jest": "^26.0.19",
+    "@types/lodash-es": "^4.17.4",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@vue/compiler-sfc": "^3.0.0-alpha.11",
