--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/lodash-es": "^4.17.4",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@vue/compiler-sfc": "^3.0.0-alpha.11",
+    "@vue/compiler-sfc": "^3.0.11",
     "@vue/test-utils": "^2.0.0-beta.13",
     "@vuedx/typescript-plugin-vue": "^0.2.3",
     "autoprefixer": "^10.0.4",
