--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "test": "yarn jest --watch"
   },
   "dependencies": {
-    "@iconify/iconify": "^2.0.0-rc.2",
-    "@vueuse/core": "^4.0.0-rc.5",
-    "axios": "^0.21.0",
+    "@iconify/iconify": "^2.0.0-rc.6",
+    "@vitejs/plugin-vue": "^1.2.2",
+    "@vueuse/core": "^4.9.0",
+    "axios": "^0.21.1",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
@@ -17,44 +18,39 @@
     "vue-router": "^4.0.0-rc.6",
     "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0-rc.2",
-    "vuex-persistedstate": "^4.0.0-beta.1"
+    "vuex-persistedstate": "4.0.0-beta.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config-vue": "^0.4.3",
-    "@iconify/json": "^1.1.267",
-    "@purge-icons/generated": "^0.4.1",
-    "@types/jest": "^26.0.19",
+    "@antfu/eslint-config-vue": "^0.6.4",
+    "@iconify/json": "^1.1.334",
+    "@purge-icons/generated": "^0.7.0",
+    "@types/jest": "^26.0.23",
     "@types/lodash-es": "^4.17.4",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@vue/compiler-sfc": "^3.0.11",
-    "@vue/test-utils": "^2.0.0-beta.13",
-    "@vuedx/typescript-plugin-vue": "^0.2.3",
-    "autoprefixer": "^10.0.4",
+    "@vue/test-utils": "^2.0.0-rc.6",
+    "@vuedx/typescript-plugin-vue": "^0.6.3",
+    "autoprefixer": "^10.2.5",
     "chromium": "^3.0.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.14.0",
-    "esno": "^0.3.0",
+    "eslint": "^7.25.0",
+    "esno": "^0.5.0",
     "jest": "^26.6.3",
-    "postcss-nested": "^5.0.4",
-    "presite": "^2.0.1",
-    "tailwindcss": "^2.0.1",
-    "ts-jest": "^26.4.4",
+    "postcss": "^8.2.13",
+    "postcss-nested": "^5.0.5",
+    "presite": "^2.1.2",
+    "tailwindcss": "^2.1.2",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13",
-    "vite-plugin-components": "^0.5.0",
-    "vite-plugin-md": "^0.1.3",
-    "vite-plugin-purge-icons": "^0.4.5",
-    "vite-plugin-pwa": "^0.1.7",
-    "vite-plugin-voie": "^0.4.1",
-    "voie-pages": "^0.4.0",
-    "vue-jest": "^5.0.0-alpha.1"
+    "vite": "^2.2.3",
+    "vite-plugin-md": "^0.6.3",
+    "vite-plugin-purge-icons": "^0.7.0",
+    "vite-plugin-pwa": "^0.7.2",
+    "vue-jest": "^5.0.0-alpha.8"
   },
-  "pnpm": {
-    "overrides": {
-      "postcss": "8",
-      "vue-router": "next"
-    }
+  "peerDependencies": {
+    "postcss": "^8.2.13"
   },
   "eslintConfig": {
     "extends": "@antfu/eslint-config-vue",
