--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.0.11",
     "vue-i18n": "9.0.0-beta.8",
     "vue-router": "^4.0.0-rc.6",
+    "vue-slider-component": "^4.0.0-beta.3",
     "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0-rc.2",
     "vuex-persistedstate": "4.0.0-beta.3"
