--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/randomstring": "^1.1.6",
     "@types/spotify-web-api-node": "^4.0.2",
     "nodemon": "^2.0.6",
