--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.3.5",
     "@types/express": "^4.17.13",
     "@types/randomstring": "^1.1.6",
     "@types/spotify-web-api-node": "^4.0.2",
+    "connect-history-api-fallback": "^1.6.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.3"
   },
