--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install dependencies
       run: npx pnpm i
   test:
+    runs-on: ubuntu-latest
     needs: setup
     steps:
     - name: Run Unit Test
