--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - master
 
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  SERVICE_NAME: vue-spotify-app
+  RUN_REGION: asia-east1-a
+
 jobs:
   setup-build-deploy:
     runs-on: ubuntu-latest
@@ -40,3 +45,17 @@ jobs:
         export_default_credentials: true
     - name: Print gcloud info
       run: gcloud info
+    - name: Build and push image to Google Container Registry
+      run: |
+        gcloud builds submit \
+          ---quiet \
+          --tag "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
+    - name: Deploy image to Cloud Run
+      run: |
+        gcloud run deploy "$SERVICE_NAME" \
+          --quiet \
+          --region "$RUN_REGION" \
+          --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
+          --platform "managed" \
+          --port 80 \
+          --allow-unauthenticated
