change node-version matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,9 @@ env:
 jobs:
   setup-build-deploy:
     runs-on: ubuntu-latest
-    with:
-      node-version: '14.x'
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
@@ -47,7 +48,7 @@ jobs:
     - name: Build and push image to Google Container Registry
       run: |
         gcloud builds submit \
-          --quiet \
+          ---quiet \
           --tag "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
     - name: Deploy image to Cloud Run
       run: |
