--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Build and push image to Google Container Registry
       run: |
         gcloud builds submit \
-          ---quiet \
+          --quiet \
           --tag "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
     - name: Deploy image to Cloud Run
       run: |
