--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,13 +31,13 @@ jobs:
     - name: Run Unit Test
       run: npm run unit-test
     - name: Build Front End
-      run: |
-        npm run build
-        ls
+      run: npm run build
     - name: Build Backend End
       run: |
         cd backend
         yarn run build-ts
+    - name: Check out repository after built
+      uses: actions/checkout@v2
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@master
       with:
